--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/dependency-injection": "~2.3",
         "symfony/config": "~2.3",
         "symfony/http-kernel": "~2.3",
-        "doctrine/orm": "~2.3"
+        "doctrine/orm": "~2.3",
+        "byscripts/notifier": "~0.0.2"
     },
     "autoload": {
         "psr-4": {
